# webrtc_starter

./: .gitignore  CMakeLists.txt  README.md  build.sh  util.sh
cmake/: FindWebRTC.cmake
peerconnection/: CMakeLists.txt  client.cpp
pkgconfig/: webrtc.pc
sigslot/: CMakeLists.txt  main.cpp
test/: CMakeLists.txt  simple_app.cc
