add_executable(simple_app simple_app.cc)
target_link_libraries(simple_app stdc++ ${WEBRTC_LIBRARY_DIRS}/libwebrtc.a "-framework Cocoa -framework Foundation -framework IOKit -framework Security -framework SystemConfiguration -framework ApplicationServices -framework CoreServices -framework CoreVideo -framework CoreAudio -framework AudioToolbox -framework QTKit -framework AVFoundation -framework CoreMedia")